k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-puck-demo
  namespace: puck-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nextjs-puck-demo
  template:
    metadata:
      labels:
        app: nextjs-puck-demo
    spec:
      containers:
        - name: web
          image: nextjs-puck-demo:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/whoami
              port: 3000
              httpHeaders:
                - name: Host
                  value: shop-a.local
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/whoami
              port: 3000
              httpHeaders:
                - name: Host
                  value: shop-a.local
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
