k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-puck-demo
  namespace: puck-demo
spec:
  type: ClusterIP
  selector:
    app: nextjs-puck-demo
  ports:
    - name: http
      port: 80
      targetPort: 3000
