k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-puck-demo
  namespace: puck-demo
spec:
  ingressClassName: nginx
  rules:
    - host: shop-a.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs-puck-demo
                port:
                  number: 80
    - host: shop-b.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextjs-puck-demo
                port:
                  number: 80
